--- a/index.html
+++ b/index.html
@@ -6,8 +6,27 @@
 </head>
 <body>
 
-<div class="game-title">
+<div class = "opening-animation">
 	<h1> PLAY THE GAME</h1>
+	<img src="">
+</div>
+
+<div class = "game-container"> 
+
+
+<div class="game-title">
+	
+</div>
+
+<div class="scoreCounter">
+</div>
+
+<div class="guessedletters"> 
+</div>
+
+<div class="dash-letter-bar">
+</div>
+
 </div>
 
 <script type="text/javascript">
@@ -20,7 +39,18 @@
 
 	var secretWord= words[getRandomIntInclusive()];
 
+
 	console.log(secretWord);
+
+	//word parsing function 
+	var parsedWord = [] 
+		for ( var i = 0; i < secretWord.length; i++) {
+			parsedWord.push(secretWord[i]);
+		};
+ 
+	console.log(parsedWord)
+
+
 
 
 </script>
@@ -32,12 +62,11 @@
 
 var userGuessLetter = [];
 
-var parsedWord = [] 
-for ( var i = 0; i < secretWord.length; i++) {
-	parsedWord.push(secretWord[i]);
-};
- 
-console.log(parsedWord)
+var guessedletters = [];
+
+var scoreCounter = 0; 
+
+
 
 
 
